core: close private D-BUS connections on disconnect (bgo #698640)

Private connections need to be closed in addition to being unrefed.

https://bugzilla.gnome.org/show_bug.cgi?id=698640